[metadata]
name = get_code_metrics
version = "0.0.0"
# バージョンをPythonスクリプト内の変数から取ることも出来る
# package_aの__init__.pyに`version = "1.0.0"`などと宣言しておけば以下で参照できる
# version = attr: package_a.version
author = LakeRainSound
author_email = restartsugar@gmail.com
description = hoge
url = https://github.com/LakeRainSound/get_code_metrics
# ライセンスファイルへのパスを指定
license_file = LICENSE

[options]
# Pythonバージョンの制約
pythonrequire = >=3.5
# 含めるパッケージの選択．この場合は自動で探索
packages = find:
# 列挙する場合は普通にインストールするパッケージを羅列すれば良い
# ただしトップレベルパッケージのみ書いてもそれ以下のサブパッケージは含まれない
# packages =
#    package_a

# 依存関係の列挙
# Pythonのベストプラクティスによるとここでガチガチにバージョンを固定すべきでないとしている
install_requires =


[options.packages.find]
# 自動探索から外すものを列挙
# exclude = .gitignore
# 逆にあるディレクトリ以下だけに限る場合
# excludeするものよりこちらの方が少ない記述で済む場合はこの方が楽
# include_recursive =
#     fuga

[options.entry_points]
console_scripts =
    # コマンド名 = モジュールまでのパス:関数名
    gcm = get_code_metrics.main:main